weird CSS bug sometimes causing posts to overlap

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -215,6 +215,7 @@ span.omitted {
 }
 br.clear {
 	clear: left;
+	display: block;
 }
 span.controls {
 	float: right;
